# am335x_freertos

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  am335x_freertos.ld
app/: init.cpp  init.h  main.cpp
freertos_kernel/: CMakeLists.txt
freertos_kernel/include/: FreeRTOSConfig.h
freertos_kernel/portable/: AM335x_INTC.h  exceptionhandlers.s  port.c  portmacro.h  startup.s
freertos_kernel/portable/MemMang/: CmakeLists.txt
ozone/: AM335x.svd  AM335x_DDR_Init.jlinkscript  am335x_freertos.jdebug  am335x_freertos_relwithdebinfo.jdebug
